<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:grid="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.sapuglha.tictactoe.ui.MainActivity">

    <data>

        <import type="com.sapuglha.tictactoe.model.PlayerType" />

        <import type="android.view.View" />

        <variable
            name="gameHandler"
            type="com.sapuglha.tictactoe.controller.GameStatusHandler" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="visible">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_activity_winner_indicator" />

            <TextView
                android:id="@+id/activity_main_label_winner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="0dp"
                android:paddingLeft="5dp"
                android:paddingRight="0dp"
                android:paddingStart="5dp"
                android:text='@{gameHandler.winner ?? "-" }' />
        </LinearLayout>


        <androidx.gridlayout.widget.GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorBackground"
            grid:columnCount="3"
            grid:rowCount="3">

            <ImageView
                android:id="@+id/activity_main_board_0_0"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="2dp"
                android:background="@color/colorTile"
                android:onClick="@{() -> gameHandler.play(0, 0)}"
                android:src="@{gameHandler.getPlayerResource(0,0)}"
                grid:layout_column="0"
                grid:layout_columnWeight="1"
                grid:layout_row="0"
                grid:layout_rowWeight="1" />

            <ImageView
                android:id="@+id/activity_main_board_0_1"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="2dp"
                android:background="@color/colorTile"
                android:onClick="@{() -> gameHandler.play(0, 1)}"
                android:src="@{gameHandler.getPlayerResource(0, 1)}"
                grid:layout_column="1"
                grid:layout_columnWeight="1"
                grid:layout_row="0"
                grid:layout_rowWeight="1" />

            <ImageView
                android:id="@+id/activity_main_board_0_2"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="2dp"
                android:background="@color/colorTile"
                android:onClick="@{() -> gameHandler.play(0, 2)}"
                android:src="@{gameHandler.getPlayerResource(0, 2)}"
                grid:layout_column="2"
                grid:layout_columnWeight="1"
                grid:layout_row="0"
                grid:layout_rowWeight="1" />

            <ImageView
                android:id="@+id/activity_main_board_1_0"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="2dp"
                android:background="@color/colorTile"
                android:onClick="@{() -> gameHandler.play(1, 0)}"
                android:src="@{gameHandler.getPlayerResource(1, 0)}"
                grid:layout_column="0"
                grid:layout_columnWeight="1"
                grid:layout_row="1"
                grid:layout_rowWeight="1" />

            <ImageView
                android:id="@+id/activity_main_board_1_1"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="2dp"
                android:background="@color/colorTile"
                android:onClick="@{() -> gameHandler.play(1, 1)}"
                android:src="@{gameHandler.getPlayerResource(1, 1)}"
                grid:layout_column="1"
                grid:layout_columnWeight="1"
                grid:layout_row="1"
                grid:layout_rowWeight="1" />

            <ImageView
                android:id="@+id/activity_main_board_1_2"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="2dp"
                android:background="@color/colorTile"
                android:onClick="@{() -> gameHandler.play(1, 2)}"
                android:src="@{gameHandler.getPlayerResource(1, 2)}"
                grid:layout_column="2"
                grid:layout_columnWeight="1"
                grid:layout_row="1"
                grid:layout_rowWeight="1" />

            <ImageView
                android:id="@+id/activity_main_board_2_0"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="2dp"
                android:background="@color/colorTile"
                android:onClick="@{() -> gameHandler.play(2, 0)}"
                android:src="@{gameHandler.getPlayerResource(2, 0)}"
                grid:layout_column="0"
                grid:layout_columnWeight="1"
                grid:layout_row="2"
                grid:layout_rowWeight="1" />

            <ImageView
                android:id="@+id/activity_main_board_2_1"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="2dp"
                android:background="@color/colorTile"
                android:onClick="@{() -> gameHandler.play(2, 1)}"
                android:src="@{gameHandler.getPlayerResource(2, 1)}"
                grid:layout_column="1"
                grid:layout_columnWeight="1"
                grid:layout_row="2"
                grid:layout_rowWeight="1" />

            <ImageView
                android:id="@+id/activity_main_board_2_2"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="2dp"
                android:background="@color/colorTile"
                android:onClick="@{() -> gameHandler.play(2, 2)}"
                android:src="@{gameHandler.getPlayerResource(2, 2)}"
                grid:layout_column="2"
                grid:layout_columnWeight="1"
                grid:layout_row="2"
                grid:layout_rowWeight="1" />

        </androidx.gridlayout.widget.GridLayout>
    </LinearLayout>
</layout>
